0.21.0
------

* Add `threading.Lock()` to allow `responses` working with `threading` module.
* Removed internal `_cookies_from_headers` function
* Now `add`, `upsert`, `replace` methods return registered response.
  `remove` method returns list of removed responses.
* Added strict version of decorator. Now you can apply `@responses.activate(assert_all_requests_are_fired=True)`
  to your function to validate that all requests were executed in the wrapped function. See #183

0.20.0
------

* Deprecate `responses.assert_all_requests_are_fired`, `responses.passthru_prefixes`, `responses.target`
  since they are not actual properties of the class instance.
  Use `responses.mock.assert_all_requests_are_fired`,
  `responses.mock.passthru_prefixes`, `responses.mock.target` instead.
* Fixed the issue when `reset()` method was called in not stopped mock. See #511

0.19.0
------

* Added a registry that provides more strict ordering based on the invocation index.
  See `responses.registries.OrderedRegistry`.
* Added shortcuts for each request method: delete, get, head, options, patch, post, put.
  For example, to add response for POST request you can use `responses.post()` instead
  of `responses.add(responses.POST)`.
* Prevent `responses.activate` decorator to leak, if wrapped function called from within another
  wrapped function. Also, allow calling of above mentioned chain. See #481 for more details.
* Expose `get_registry()` method of `RequestsMock` object. Replaces internal `_get_registry()`.
* `query_param_matcher` can now accept dictionaries with `int` and `float` values.
* Add support for the `loose` version of `query_param_matcher` via named argument `strict_match`.
* Added support for `async/await` functions.
* `response_callback` is no longer executed on exceptions raised by failed `Response`s
* Change logic of `_get_url_and_path` to comply with RFC 3986. Now URL match occurs by matching