@@ -5,8 +5,10 @@
 * Removed internal `_cookies_from_headers` function
 * Now `add`, `upsert`, `replace` methods return registered response.
   `remove` method returns list of removed responses.
+* Added null value support in `urlencoded_params_matcher` via `allow_blank` keyword argument
 * Added strict version of decorator. Now you can apply `@responses.activate(assert_all_requests_are_fired=True)`
   to your function to validate that all requests were executed in the wrapped function. See #183
+
 
 0.20.0
 ------
